--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
         "watch-poll": "mix watch -- --watch-options-poll=1000",
         "hot": "mix watch --hot",
         "prod": "npm run production",
-        "production": "mix --production"
+        "production": "mix --production",
+        "lint": "eslint resources/js/**/*.js"
     },
     "devDependencies": {
-        "axios": "^0.21",
+        "eslint": "8.1.0",
         "laravel-mix": "^6.0.6",
-        "lodash": "^4.17.19",
         "postcss": "^8.1.14"
     }
 }
